--- a/academics.html
+++ b/academics.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="style1.css">
 
 <div class = "topnav">
-	<a href="home1.html">Home</a>
+	<a href="index.html">Home</a>
 	<a href="aboutme.html">About Me</a>
 	<a class="active" href="academics.html">Academics</a>
 	<a href="#contact">Contact</a>
