--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
 
 <link rel="stylesheet" href="style1.css">
 <div class = "topnav">
-	<a href="home1.html">Home</a>
+	<a href="index.html">Home</a>
 	<a class="active" href="aboutme.html">About Me</a>
 	<a href="academics.html">Acedemics</a>
 	<a href="#contact">Contact</a>
