--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <link rel="stylesheet" type="text/css" href="style1.css">
 
 <div class = "topnav">
-	<a class="active" href="home1.html">Home</a>
+	<a class="active" href="index.html">Index</a>
 	<a href="aboutme.html">About Me</a>
 	<a href="academics.html">Acedemics</a>
 	<a href="#contact">Contact</a>
